added basic package

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									<li><a data-ga-event="survey" data-group="main-nav" data-description="Clicked survey" href="#survey">Survey</a></li>
 									<li><a data-ga-event="sign-up" data-group="main-nav" data-description="Clicked sign-up" href="http://app.hive-empire.com/sign-up.html">Sign Up</a></li>
 									<li><a data-ga-event="sign-in" data-group="main-nav" data-description="Clicked sign-in" href="http://app.hive-empire.com/sign-in.html">Sign In</a></li>
-									<li><a data-ga-event="buy" data-group="main-nav" data-description="Wants to buy starter kit" href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
+									<li><a data-ga-event="buy" data-group="main-nav" data-description="Wants to buy starter kit" href="/index.html#pricing">Buy <b>HiveEmpire-Sense</b></a></li>
 									<!-- <li class="current"><a href="">Download App</a></li> -->
 								</ul>
 							</div>
@@ -71,10 +71,11 @@
 								<h2><b>Data driven beehives. Bring science to your obsession.</b></h2>
 								<p>Monitor your Hives &amp; opt-in to allow your data to be available to a global partnership of scientists and academic apiologists.</p>
 								<p><b>Do more than just produce honey. Help save the bees!</b></p>
-								<p>Sensors for just <b>$45.00<small>*</small></b> a hive.<br/>Unlimited hives via the web &amp; mobile app for <b>$5.00</b> a month.</p>
+								<p>Sensors for just <b>$45.00<small>*</small></b> a hive.<br/>Unlimited hives via the web &amp; mobile App<small>**</small> for <b>$5.00</b> a month.</p>
 								<a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#starter-pack" class="btn btn-primary">Starter Kit</a>
 								<a data-ga-event="contact-us" data-group="sensors-in-planning" data-description="Interested in Sensors in Planning" href="#contact-form" class="btn btn-success">Contact Us</a><br/><br/>
-								<p><small>* Exl HiveEmpire-Sense device</small><br/><br/></p>
+								<p><small>* Exl HiveEmpire-Sense device</small><br/>
+								<small>** Mobile in development</small><br/><br/></p>
 							</div>
 						</div>
 					</div>
@@ -93,42 +94,35 @@
 		<div class="strip features">
 			<div class="container">
 				<div class="row">
-					<div class="span3">
+					<div class="span4">
 						<div class="inner">
 							<span class="glyph-item mega icon-screen-desktop" aria-hidden="true"></span>
 							<h3>Complete</h3>
 							<p>Temperature, Humidity, Video, Weight, In/Out Count.<br/><b>In touch &amp; in control</b><br/><em>Sensors that keep you in touch with your hive.</em></p>
 						</div>
 					</div>
-					<div class="span3">
+					<div class="span4">
 						<div class="inner">
 							<span class="glyph-item mega icon-emoticon-smile" aria-hidden="true"></span>
 							<h3>Simple</h3>
 							<p>
 								<b>1.</b> Place sensors.<br/>
-								<b>2.</b> Turn on the <em><b>HiveEmpire-Sense&#8482;</b></em> &amp; connect to the internet.<br/>
+								<b>2.</b> Turn on the <em><b>HiveEmpire-Sense</b></em> &amp; connect to the internet.<br/>
 								<b>3.</b> Know your Hive
 							</p>
 						</div>
 					</div>
-					<div class="span3">
+					<div class="span4">
 						<div class="inner">
 							<span class="glyph-item mega icon-screen-smartphone" aria-hidden="true"></span>
-							<h3>Smart &amp; Fun</h3>
-							<p>HiveEmpire&#8482;, gives you direct &amp; simple access to the hive data &amp; streaming video.</p>
+							<h3>Smart</h3>
+							<p>HiveEmpire, gives you direct &amp; simple access to the hive data &amp; streaming video.</p>
 							<p>HiveEmpire will alert you when important events happen.</p>
 							<p>We plan of providing access to a rich helpful community to get you answers when you need them.</p>
 							<!-- <p>HiveEmpire Hive Concierge service</p> -->
 						</div>
 					</div>
-					<div class="span3">
-						<div class="inner">
-							<span class="glyph-item mega icon-users" aria-hidden="true"></span>
-							<h3>Sell your hive's honey cooperatively</h3>
-							<p>Join our drive to get great locally produced honey into the global market &amp; generate a revenue</p>
-							<!-- <p>The cooperative part of HiveEmpire also lets you get support &amp; even concierge management of your hives, freeing you up to focus on other matters.</p> -->
-						</div>
-					</div>
+
 					<div class="clearfix"></div>
 				</div>
 			</div>
@@ -213,11 +207,11 @@
 				<div class="row">
 					<div class="span6">
 						<div class="inner inner-text">
-							<h2>Buy the <span>HiveEmpire-Sense&#8482;</span></h2>
-							<h4>Buy 1x HiveEmpire-Sense&#8482; &amp; its sensors via the <a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#starter-pack">Starter Kit</a></h4>
-							<p><b>Remember</b> 1x HiveEmpire-Sense&#8482; can run up to 50 sensors. So if you have more than 1 hive, you just need to buy additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Packs</a></p>
+							<h2>Buy the <span>HiveEmpire-Basic</span> kit</h2>
+							<h4>Buy 1x HiveEmpire-Sense &amp; its sensors via the <a data-ga-event="basic-kit" data-group="basic-kit" data-description="Wants to buy basic kit" href="#basic-kit">Starter Kit</a></h4>
+							<p><b>Remember</b> 1x HiveEmpire-Sense can run up to 50 sensors. So if you have more than 1 hive, you just need to buy additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Packs</a></p>
 							<p>We are constantly thinking of new sensors to add to the set &amp; are happy to take special requests</p>
-							<p>Remember you only need 1 <b>HiveEmpire-Sense&#8482;</b> to monitor up to 50 hives, so you only need an additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Pack</a> per hive.</p>
+							<p>Remember you only need 1 <b>HiveEmpire-Sense</b> to monitor up to 50 hives, so you only need an additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Pack</a> per hive.</p>
 						</div>
 					</div>
 					<div class="span6">
@@ -227,9 +221,26 @@
 					</div>
 					<div class="clearfix"></div>
 				</div>
+<!-- 				<div class="row">
+					<div class="span6">
+						<div class="inner inner-text">
+							<h2>Buy the <span>HiveEmpire-Sense</span></h2>
+							<h4>Buy 1x HiveEmpire-Sense &amp; its sensors via the <a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#starter-pack">Starter Kit</a></h4>
+							<p><b>Remember</b> 1x HiveEmpire-Sense can run up to 50 sensors. So if you have more than 1 hive, you just need to buy additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Packs</a></p>
+							<p>We are constantly thinking of new sensors to add to the set &amp; are happy to take special requests</p>
+							<p>Remember you only need 1 <b>HiveEmpire-Sense</b> to monitor up to 50 hives, so you only need an additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Pack</a> per hive.</p>
+						</div>
+					</div>
+					<div class="span6">
+						<div class="inner">
+							<img src="http://www.exponito.com/static/img/tour/istick.png" alt="Desktop" class="promoimg" />
+						</div>
+					</div>
+					<div class="clearfix"></div>
+				</div> -->
 			</div>
 		</div>
-		<div class="strip highlight">
+		<!-- <div class="strip highlight">
 			<div class="container">
 				<div class="row">
 					<div class="span6">
@@ -247,30 +258,54 @@
 					<div class="clearfix"></div>
 				</div>
 			</div>
-		</div>
-		<div class="strip strip-alt pricing" id="pricing">
+		</div> -->
+		<div class="strip highlight pricing" id="pricing">
 			<div class="container">
 				<div class="row blocks">
+					<h1>HiveEmpire-Basic Package<br/>Available</h1>
+					<div class="span4">
+						<div class="inner secondary">
+							<a name="basic-kit"></a>
+							<ul>
+								<li><h2>Basic Sensor Kit</h2></li>
+								<li class="price"><h1><span>$ </span><strong>90</strong></h1></li>
+								<li>1x Temperature &amp; Humidity Sensor</li>
+								<li>1x Weight Sensor</li>
+								<li>1 month app access free, $5.00/month thereafter</li>
+							</ul>
+							<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
+						</div>
+					</div>
+					<div class="span8" style="padding-top:35px;">
+						<h3>The <b>HiveEmpire-Basic</b> kit</h3>
+						<p>Contains all you need to get 1 hive setup &amp; monitored.</p>
+						<p>The basic kit provides 1 month free access to the web application, thereafter as a special early-bird concession only $5.00 a month.</p>
+						<p>Data is uploaded manually using our web interface.</p>
+					</div>
+				</div>
+
+				<div class="row blocks">
+					<h1>v2 HiveEmpire-Sense and Sensors<br/>Coming Soon</h1>
 					<div class="span4">
 						<div class="inner secondary">
 							<a name="starter-pack"></a>
 							<ul>
-								<li><h2>Starter Kit</h2></li>
+								<li><h2>Starter Kit<br/>coming soon</h2></li>
 								<li class="price"><h1><span>$ </span><strong>120</strong></h1></li>
 								<li>1x HiveEmpire-Sense™ &amp; sensor pack</li>
 								<li>1x Temperature &amp; Humidity Sensor</li>
 								<li>1x Weight Sensors</li>
 								<li>Power cable</li>
 								<li>LAN cable - Used to connect to the switch (wifi option available on-demand)</li>
-								<li>1 month app access free, $9.99/month thereafter</li>
+								<li>1 month app access free, $5.00/month thereafter</li>
 							</ul>
-							<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
+							<!-- <span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span> -->
 						</div>
 					</div>
 					<div class="span8" style="padding-top:35px;">
-						<h3>The <b>HiveEmpire-Sense&#8482;</b> starter pack</h3>
+						<h3>The <b>HiveEmpire-Sense</b> starter pack</h3>
 						<p>Contains all you need to get 1 hive setup &amp; monitored.</p>
-						<p>Remember you only need 1 <b>HiveEmpire-Sense&#8482;</b> to monitor up to 50 hives, so you only need additional <a href="#sensor-pack">Sensor Packs</a> per hive.</p>
+						<p>Remember you only need 1 <b>HiveEmpire-Sense</b> to monitor up to 50 hives, so you only need additional <a href="#sensor-pack">Sensor Packs</a> per hive.</p>
 					</div>
 				</div>
 				<div class="row blocks">
@@ -278,12 +313,12 @@
 						<div class="inner secondary">
 							<a name="sensor-pack"></a>
 							<ul>
-								<li><h2>Hive Sensor Pack</h2></li>
+								<li><h2>Hive Sensor Pack<br/>coming soon</h2></li>
 								<li class="price"><h1><span>$ </span><strong>45</strong><small></small></h1></li>
 								<li>1x Temperature &amp; Humidity Sensor</li>
 								<li>1x Weight Sensors</li>
 							</ul>
-							<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
+							<!-- <span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span> -->
 						</div>
 					</div>
 					<div class="span8" style="padding-top:35px;">
@@ -302,7 +337,7 @@
 								<li>Counter bees as they enter or exit the hive</li>
 								<li class="price"><h1><span>$ </span><strong>80</strong><small></small></h1></li>
 							</ul>
-							<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
+							<!-- <span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span> -->
 						</div>
 					</div>
 					<div class="span4">
@@ -313,7 +348,7 @@
 								<li>Camera to capture your bees as they, be bees.</li>
 								<li class="price"><h1><span>$ </span><strong>80</strong><small></small></h1></li>
 							</ul>
-							<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
+							<!-- <span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span> -->
 						</div>
 					</div>
 					<div class="span4" style="padding-top:35px;">
@@ -326,7 +361,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="strip highlight">
+	<div class="strip highlight strip-alt">
 		<a name="mailchimp"></a>
 		<div class="container">
 			<div class="row">
@@ -363,7 +398,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="strip highlight strip-alt">
+	<div class="strip highlight">
 		<a name="survey"></a>
 		<div class="container">
 			<div class="row">
@@ -383,7 +418,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="strip highlight">
+	<div class="strip highlight strip-alt">
 		<a name="mailchimp"></a>
 		<div class="container">
 			<div class="row">
