--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									<li><a data-ga-event="survey" data-group="main-nav" data-description="Clicked survey" href="#survey">Survey</a></li>
 									<li><a data-ga-event="sign-up" data-group="main-nav" data-description="Clicked sign-up" href="http://app.hive-empire.com/sign-up.html">Sign Up</a></li>
 									<li><a data-ga-event="sign-in" data-group="main-nav" data-description="Clicked sign-in" href="http://app.hive-empire.com/sign-in.html">Sign In</a></li>
-									<li><a data-ga-event="buy" data-group="main-nav" data-description="Wants to buy starter kit" href="/index.html#pricing">Buy <b>HiveEmpire-Sense</b></a></li>
+									<li><a data-ga-event="buy" data-group="main-nav" data-description="Wants to buy starter kit" href="/index.html#starter-kit">Buy <b>HiveEmpire-Sense</b></a></li>
 									<!-- <li class="current"><a href="">Download App</a></li> -->
 								</ul>
 							</div>
@@ -72,7 +72,7 @@
 								<p>Monitor your Hives &amp; opt-in to allow your data to be available to a global partnership of scientists and academic apiologists.</p>
 								<p><b>Do more than just produce honey. Help save the bees!</b></p>
 								<p>Sensors for just <b>$90.00<small>*</small></b> a hive.<br/>Unlimited hives via the web &amp; mobile App<small>**</small> for <b>$5.00</b> a month.</p>
-								<a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#starter-pack" class="btn btn-primary">Starter Kit</a>
+								<a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#starter-kit" class="btn btn-primary">Starter Kit</a>
 								<a data-ga-event="contact-us" data-group="sensors-in-planning" data-description="Interested in Sensors in Planning" href="#contact-form" class="btn btn-success">Contact Us</a><br/><br/>
 								<p><small>* Exl HiveEmpire-Sense device</small><br/>
 								<small>** Mobile in development</small><br/><br/></p>
@@ -208,10 +208,9 @@
 					<div class="span6">
 						<div class="inner inner-text">
 							<h2>Buy the <span>HiveEmpire-Basic</span> kit</h2>
-							<h4>Buy 1x HiveEmpire-Sense &amp; its sensors via the <a data-ga-event="basic-kit" data-group="basic-kit" data-description="Wants to buy basic kit" href="#basic-kit">Starter Kit</a></h4>
-							<p><b>Remember</b> 1x HiveEmpire-Sense can run up to 50 sensors. So if you have more than 1 hive, you just need to buy additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Packs</a></p>
-							<p>We are constantly thinking of new sensors to add to the set &amp; are happy to take special requests</p>
-							<p>Remember you only need 1 <b>HiveEmpire-Sense</b> to monitor up to 50 hives, so you only need an additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Pack</a> per hive.</p>
+							<h4>Buy 1x HiveEmpire-Basic via <a data-ga-event="starter-kit" data-group="starter-kit" data-description="Wants to buy starter kit" href="#starter-kit">Basic Kit</a></h4>
+							<p><b>Remember</b> 1x HiveEmpire-Basic per 1 hive, with manual upload of data.</p>
+							<p><small>Mobile app coming soon</small></p>
 						</div>
 					</div>
 					<div class="span6">
@@ -225,7 +224,7 @@
 					<div class="span6">
 						<div class="inner inner-text">
 							<h2>Buy the <span>HiveEmpire-Sense</span></h2>
-							<h4>Buy 1x HiveEmpire-Sense &amp; its sensors via the <a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#starter-pack">Starter Kit</a></h4>
+							<h4>Buy 1x HiveEmpire-Sense &amp; its sensors via the <a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#v2-starter-kit">Starter Kit</a></h4>
 							<p><b>Remember</b> 1x HiveEmpire-Sense can run up to 50 sensors. So if you have more than 1 hive, you just need to buy additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Packs</a></p>
 							<p>We are constantly thinking of new sensors to add to the set &amp; are happy to take special requests</p>
 							<p>Remember you only need 1 <b>HiveEmpire-Sense</b> to monitor up to 50 hives, so you only need an additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Pack</a> per hive.</p>
@@ -265,7 +264,7 @@
 					<h1>HiveEmpire-Basic Package<br/>Available</h1>
 					<div class="span4">
 						<div class="inner secondary">
-							<a name="basic-kit"></a>
+							<a name="starter-kit"></a>
 							<ul>
 								<li><h2>Basic Sensor Kit</h2></li>
 								<li class="price"><h1><span>$ </span><strong>90</strong></h1></li>
@@ -288,7 +287,7 @@
 					<h1>v2 HiveEmpire-Sense and Sensors<br/>Coming Soon</h1>
 					<div class="span4">
 						<div class="inner secondary">
-							<a name="starter-pack"></a>
+							<a name="v2-starter-kit"></a>
 							<ul>
 								<li><h2>Starter Kit<br/>coming soon</h2></li>
 								<li class="price"><h1><span>$ </span><strong>120</strong></h1></li>
@@ -311,7 +310,7 @@
 				<div class="row blocks">
 					<div class="span4">
 						<div class="inner secondary">
-							<a name="sensor-pack"></a>
+							<a name="v2-sensor-pack"></a>
 							<ul>
 								<li><h2>Hive Sensor Pack<br/>coming soon</h2></li>
 								<li class="price"><h1><span>$ </span><strong>45</strong><small></small></h1></li>
