added dash reference

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 								<h1>Know your Hive</h1>
 								<h2><b>Data driven beehives. Bring science to your obsession.</b></h2>
 								<p>Monitor your Hives &amp; opt-in to allow your data to be available to a global partnership of scientists and academic apiologists.</p>
+
+								<a class="btn btn-success btn-lg" href="http://app.hive-empire.com/#/hives/1d9fbb8554d14feea06d266ad017fd36/dashboard">Public Dashboard Demo</a>
+
 								<p><b>Do more than just produce honey. Help save the bees!</b></p>
 								<p>Sensors for just <b>$90.00<small>*</small></b> a hive.<br/>Unlimited hives via the web &amp; mobile App<small>**</small> for <b>$5.00</b> a month.</p>
 								<a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#starter-kit" class="btn btn-primary">Starter Kit</a>
