--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 						<div class="inner">
 							<div class="hero content-markup">
 								<h1>Know your Hive</h1>
+								<h2><b>Newsflash:</b> v2 wireless sensor prototype is functional!</h2>
 								<h2><b>Data driven beehives. Bring science to your obsession.</b></h2>
 								<p>Monitor your Hives &amp; opt-in to allow your data to be available to a global partnership of scientists and academic apiologists.</p>
 
